# daily_bible_crawler

./: .gitignore  Dockerfile  README.md  pyproject.toml
daily_bible_crawler/: main.py
tests/: test_main.py
