[tool.poetry]
name = "daily-bible-crawler"
version = "0.1.0"
description = "매일성경 웹사이트에서 말씀과 해설을 크롤링하여 이메일로 전송하는 프로그램"
authors = ["joseph <joseph@buzzni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
playwright = "^1.42.0"
google-auth-oauthlib = "^1.2.0"
google-auth = "^2.28.1"
google-api-python-client = "^2.120.0"
tenacity = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
